--- a/VN2Anki/VN2Anki.csproj
+++ b/VN2Anki/VN2Anki.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="NAudio.Lame" Version="2.1.0" />
     <PackageReference Include="SharpClipboard" Version="3.5.2" />
     <PackageReference Include="System.Drawing.Common" Version="10.0.3" />
   </ItemGroup>
