--- a/VN2Anki/VN2Anki.csproj
+++ b/VN2Anki/VN2Anki.csproj
@@ -16,12 +16,17 @@
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3800.47" />
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="NAudio.Lame" Version="2.1.0" />
+    <PackageReference Include="PixiEditor.ColorPicker" Version="3.4.2.2" />
     <PackageReference Include="Serilog" Version="4.3.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="10.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="SharpClipboard" Version="3.5.2" />
     <PackageReference Include="System.Drawing.Common" Version="10.0.3" />
   </ItemGroup>
+
+	<ItemGroup>
+		<Using Remove="System.Drawing" />
+	</ItemGroup>
 
   <ItemGroup>
     <Compile Update="Locales\Strings.pt.Designer.cs">
